fix: Minor improvements and fixes to the README.md file for better readability and spelling correction.

--- a/src/assets/scss/theme/colors.scss
+++ b/src/assets/scss/theme/colors.scss
@@ -48,7 +48,7 @@
 	--puri-border: var(--puri-border-width) var(--puri-border-style)
 		var(--puri-border-color);
 
-	--puri-white: #fcf1fc;
+	--puri-white: #ffffff;
 	--puri-dark: #2b2b40;
 
 	--puri-gradient: radial-gradient(
@@ -72,7 +72,7 @@ html[data-theme="light"],
 	// --puri-dark-800: #1e1e2d;
 	// --puri-dark-900: #151521;
 
-	--puri-dark-100: #fcf1fc;
+	--puri-dark-100: #ffffff;
 	--puri-dark-200: #fdf9fd;
 	--puri-dark-300: #dddfff;
 	--puri-dark-400: #7e8299;
@@ -108,7 +108,7 @@ html[data-theme="dark"],
 	--puri-dark-200: #2a2a3c;
 	--puri-dark-300: #2b2b40;
 	--puri-dark-400: #7e8299;
-	--puri-dark-500: #fcf1fc;
+	--puri-dark-500: #ffffff;
 	--puri-dark-rgba: rgba(30, 30, 45, 0.6); // 100
 
 	// --puri-dark-rgba: rgba(30, 30, 45, 0.4); // 100
